<resources>
    <string name="app_name">PedalPals</string>
    <string name="register_for_an_account">Register for an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="no_account_register">No account? Register</string>
    <string name="login_into_account">Login into account</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="female">Female</string>
    <string name="rider">Rider</string>
    <string name="event_manager">Event Manager</string>
</resources>