<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="652dp"
        android:layout_height="862dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/bg2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="228dp"
        android:layout_height="163dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="528dp"
        android:layout_height="801dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.073"
        app:srcCompat="@drawable/r_shape" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/register_for_an_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="356dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        android:autofillHints="@string/email"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/loginpass"
        android:layout_width="362dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

</androidx.constraintlayout.widget.ConstraintLayout>